--- a/frame2.html
+++ b/frame2.html
@@ -9,7 +9,7 @@
         <style>
           @media (prefers-color-scheme: light) {
             body {
-              background-color:red !important;
+              background-color:white !important;
             }
             .body {
               background-color:white !important;
