Updated After7 template

--- a/frame3.html
+++ b/frame3.html
@@ -191,7 +191,7 @@
                             <p class="deep-blue-text-color" style="background: #E7F5FF; font-size: 15px; font-family: 'Raleway', sans-serif; color: #004972; font-weight: bold; width: 291px; text-align: center; padding-top: 20px; padding-bottom: 20px; font-size: 30px;"><strong>593056</strong></p>
                             <p class="black-text-color" style="color: black; font-size: 15px; font-family: 'Raleway', sans-serif; padding-top: 10px; padding-bottom: 10px; font-weight: bold;"><strong>Thank you for choosing After7</strong></p>
                                 <p class="reach-out" style="background: #36B2F7; padding-top: 12px; padding-bottom: 12px; font-size: 15px; font-family: 'Raleway', sans-serif; font-weight: bold; width: 230px; color: white; font-weight: bold; text-align: center;"><strong>Want to reach out to us?</strong></p>
-                                <p style="margin-top: -20px;">
+                                <div style="margin-top: -20px;">
                                   <p class="deep-blue-color" style="background: #004972; padding-top: 30px; padding-bottom: 30px; padding-left: 30px; padding-right: 30px; margin-bottom: 40px;">
                                     <span class="lite-blue-text-color" style="color: #36B2F7; font-family: 'Raleway', sans-serif; font-weight: bold;"><strong>www.after7.com</strong></span>
                                     <br />
@@ -201,8 +201,7 @@
                                     <br />
                                     <span class="white-text-color" style="font-family: 'Raleway', sans-serif; color: white;">support@after7.com.ng</span>
                                   </p>
-                                </p>
-                            </p>
+                                </div>
                                 <table class="lite-blue-color" style="background: #E7F5FF; width: 100%; border-radius: 5px;">
                                     <tbody>
                                       <tr>
@@ -230,14 +229,14 @@
                                     You are receiving this email because you signed up on After7 . If you don’t want to continue receiving these emails you can
                                     <span class="lite-blue-text-color" style="color: #36B2F7; text-decoration: underline;">unsubscribe here.</span>
                                 </p>
-                                <p style="margin-top: 40px;">
+                                <div style="margin-top: 40px;">
                                       <p style="text-align: center;">
                                           <a><img src="https://res.cloudinary.com/dm1ta9lno/image/upload/v1646300418/after7-mail-template/facebook_enfpdj.png" style="width: 25px; cursor: pointer;" /></a>
                                           <a><img src="https://res.cloudinary.com/dm1ta9lno/image/upload/v1646300485/after7-mail-template/twitter_qevan5.png" style="width: 25px; cursor: pointer;" /></a>
                                           <a><img src="https://res.cloudinary.com/dm1ta9lno/image/upload/v1646300444/after7-mail-template/instagram_f49chj.png" style="width: 25px; cursor: pointer;" /></a>
                                       </p>
                                     <br />
-                                </p>
+                                </div>
                             </div>
                           </td>
                         </tr>
